// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Box BoxBackground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  color: #ffffff;
  background-color: #1B214F;
  margin-bottom: 0.75rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          Background Inverted
        </span>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Box BoxHorizontalPadding smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 0 1.25rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          Padding Horizontal 7
        </span>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Box BoxPaddingAllSides smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 0.25rem;
  margin-bottom: 0.75rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          Padding 3
        </span>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Box BoxVerticalPadding smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 1.25rem 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          Padding Vertical 7
        </span>
      </span>
    </span>
  </body>
</html>
`;
